--- a/index.html
+++ b/index.html
@@ -76,11 +76,10 @@
     </style>
 </head>
 <body>
-    <div class="container">      
+    <div class="container" style="height: 90vh; display: flex; justify-content: center; align-items: center;">      
         <div id="reader" class="hidden"></div>
         
         <div class="now-playing hidden">
-            <h2>Now Playing</h2>
             <audio id="audioPlayer" controls></audio>
         </div>
 
