Add server deployment files

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
         }
 
         button {
-            background: #1DB954;
+            background: white;
             border: none;
             padding: 12px 24px;
             border-radius: 20px;
-            color: white;
+            color: black;
             font-weight: bold;
             cursor: pointer;
             transition: transform 0.1s;
